# fair-eva-plugin-digitalcsic

./: .gitignore  README.md  metadata_testing.csv  pyproject.toml  setup.py  verify_local_load.py
fair_eva/plugin/digital_csic/: __init__.py  config.example.ini  config.ini  plugin.py  test_met.csv
fair_eva/plugin/epos/: config.ini  plugin.py
