[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_eva"]
namespaces = true

[project]
version = "1.0.0"
name = "fair-eva-plugin-digitalcsic"
requires-python = ">=3.7"
license = { text = "GNU General Public License v3.0 or later" }
description = "FAIR-eva plugin for Digital CSIC"
dependencies = [
    "fair-eva",
]
