[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["fair_eva.plugin.digital_csic"]
namespaces = true

[tool.setuptools.package-data]
"fair_eva.plugin.digital_csic" = ["*.ini"]

[project]
version = "0.1.0"
name = "fair-eva-plugin-digitalcsic"
requires-python = ">=3.7"
license = { text = "GNU General Public License v3.0 or later" }
description = "FAIR-eva plugin for Digital CSIC"
dependencies = [
    "fair-eva @ git+https://github.com/IFCA-Advanced-Computing/FAIR_eva@dev/digital_csic_needs"
]
[project.entry-points."fair_eva.plugin"]
digital_csic = "fair_eva.plugin.digital_csic:Plugin"
